added expression order checker

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.27)
 project(math-expression-parser)
-add_executable(math-expression main.cpp)
+add_executable(math-expression main.cpp CheckOrder.cpp Variable.cpp)
 
