added postfix to prefix conversion

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.27)
 project(math-expression-parser)
-add_executable(math-expression main.cpp CheckOrder.cpp Variable.cpp)
+set(EXECUTABLE_OUTPUT_PATH "~/Documents/projects/math-expression-parser/bin/")
+add_executable(math-expression main.cpp CheckOrder.cpp Variable.cpp toPrefix.cpp)
 
